--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
         npm ci --production
 
     - name: Build Static Website
-      run: npm run build
+      run: |
+        npm link @angular/cli
+        npm run build
 
     - name: Copy files to the production website with the AWS CLI
       run: |
